force-app/main/default/objects/pstar__Workflow__c/fields/pstar__Application__c.field-meta.xml
<CustomField>
    <fullName>pstar__Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>pstar__Application__c</referenceTo>
    <relationshipLabel>Workflows</relationshipLabel>
    <relationshipName>Workflows</relationshipName>
    <type>Lookup</type>
</CustomField>