force-app/main/default/objects/pstar__Workflow__c/fields/pstar__Config_Workflow__c.field-meta.xml
<CustomField>
    <fullName>pstar__Config_Workflow__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Config Workflow</label>
    <referenceTo>pstar__Config_Workflow__c</referenceTo>
    <relationshipLabel>Workflows</relationshipLabel>
    <relationshipName>Workflows</relationshipName>
    <type>Lookup</type>
</CustomField>