force-app/main/default/objects/pstar__Workflow__c/fields/pstar__Config_Workflow_Id__c.field-meta.xml
<CustomField>
    <fullName>pstar__Config_Workflow_Id__c</fullName>
    <label>Config Workflow Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>