force-app/main/default/objects/pstar__Workflow__c/fields/pstar__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>pstar__Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>