force-app/main/default/objects/pstar__Workflow__c/fields/pstar__Patient_Admission__c.field-meta.xml
<CustomField>
    <fullName>pstar__Patient_Admission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient Admission</label>
    <referenceTo>pstar__Patient_Admission__c</referenceTo>
    <relationshipLabel>Workflows</relationshipLabel>
    <relationshipName>Workflows</relationshipName>
    <type>Lookup</type>
</CustomField>