force-app/main/default/objects/pstar__Workflow__c/fields/pstar__Source__c.field-meta.xml
<CustomField>
    <fullName>pstar__Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source</label>
    <referenceTo>pstar__Source__c</referenceTo>
    <relationshipLabel>Workflows</relationshipLabel>
    <relationshipName>Workflows</relationshipName>
    <type>Lookup</type>
</CustomField>