force-app/main/default/objects/pstar__Workflow__c/fields/pstar__Team_Based_Assignment__c.field-meta.xml
<CustomField>
    <fullName>pstar__Team_Based_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Team Based Assignment</label>
    <type>Checkbox</type>
</CustomField>